force-app/main/default/objects/PricebookEntry/fields/Code__c.field-meta.xml
<CustomField>
    <fullName>Code__c</fullName>
    <externalId>true</externalId>
    <label>Código Sap</label>
    <length>10</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>