force-app/main/default/objects/PricebookEntry/fields/CostPrice__c.field-meta.xml
<CustomField>
    <fullName>CostPrice__c</fullName>
    <label>Preço de Custo</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>