force-app/main/default/objects/PricebookEntry/fields/Product2Id__c.field-meta.xml
<CustomField>
    <fullName>Product2Id__c</fullName>
    <label>Produto</label>
    <length>100</length>
    <type>Text</type>
</CustomField>