force-app/main/default/objects/PricebookEntry/fields/UnitPrice__c.field-meta.xml
<CustomField>
    <fullName>UnitPrice__c</fullName>
    <label>Valor Unitario</label>
    <length>100</length>
    <type>Text</type>
</CustomField>